added method to get interface instance with default values
